# ylang

./: .gitignore  ARENA_IMPROVEMENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  highlight.html  other.sable  test.rs  test.sable  test_file.sable
crates/sable-arena/: Cargo.toml
crates/sable-arena/src/: arc.rs  arena.rs  interner.rs  lib.rs  rc.rs  tests.rs  typed_arena.rs
crates/sable-ast/: Cargo.toml
crates/sable-ast/src/: ast.rs  expression.rs  lib.rs  located.rs  location.rs  statement.rs  token.rs  types.rs
crates/sable-ast/src/expression/: assign_expression.rs  binary_expression.rs  block_expression.rs  identifier_expression.rs  literal_expression.rs
crates/sable-ast/src/objects/: function.rs
crates/sable-ast/src/parse_error/: mod.rs  unexpected_token.rs
crates/sable-ast/src/statement/: variable_statement.rs
crates/sable-common/: Cargo.toml
crates/sable-common/src/: cache.rs  context.rs  interner.rs  lib.rs  location.rs  manager.rs  once.rs  report.rs  source.rs  tests.rs  writer.rs
crates/sable-common/src/file/: cache.rs  manager.rs  mod.rs  source.rs
crates/sable-common/src/ty/: mod.rs  resolution.rs  types.rs
crates/sable-errors/: Cargo.toml
crates/sable-errors/src/: cache.rs  console_sink.rs  diagnostic.rs  lib.rs  lsp_sink.rs  sink.rs  writer.rs
crates/sable-errors/src/lex_error/: comment_error.rs  mod.rs  numeric_error.rs  unknown_char.rs
crates/sable-errors/src/parse_error/: mod.rs  unexpected_token.rs
crates/sable-ffi/: Cargo.toml  build.rs  sable-ffi.h
crates/sable-hir/: Cargo.toml
crates/sable-hir/src/: context.rs  definition.rs  expression.rs  item.rs  lib.rs  lower.rs  lowering.rs  module.rs  package.rs  statement.rs  symbol.rs  ty.rs  unit.rs
crates/sable-hir/src/hir/: item.rs  mod.rs  module.rs
crates/sable-hir/src/lower/: mod.rs
crates/sable-hir/src/object/: function.rs
crates/sable-hir/src/objects/: function.rs
crates/sable-lowering/: Cargo.toml
crates/sable-lowering/src/: ast.rs  lib.rs  resolver.rs  scope.rs
crates/sable-lowering/src/ast/: mod.rs
crates/sable-lowering/src/ast_lower/: lower.rs  resolver.rs
crates/sable-lowering/src/ast_lower_error/: mod.rs
crates/sable-macros/: Cargo.toml
crates/sable-middle/: Cargo.toml
crates/sable-middle/src/: context.rs  gctx.rs  lib.rs  module.rs  package.rs  scope.rs  str_interner.rs  tu.rs  ty.rs
crates/sable-middle/src/hir/: module.rs
crates/sable-middle/src/ty/: def.rs  mod.rs  tcx.rs  types.rs
crates/sable-parse/: Cargo.toml
crates/sable-parse/src/: lexer.rs  lib.rs  parser.rs
crates/sable-parse/src/lex_error/: comment_error.rs  numeric_error.rs  unknown_char.rs
crates/sable-parse/src/parse_error/: mod.rs  unexpected_token.rs
crates/sable-parser/: Cargo.toml
crates/sable-parser/src/: error.rs  lexer.rs  lib.rs  location.rs  parser.rs  token.rs
crates/sable-parser/src/error/: unexpected_token.rs
crates/sable-parser/src/lexer/: mod.rs
crates/sable-parser/src/parser/: mod.rs
crates/sable-parser/src/token/: mod.rs
crates/sable-report/: Cargo.toml
crates/sable-report/src/: cache.rs  diagnostic.rs  engine.rs  label.rs  lib.rs  sink.rs  span.rs  writer.rs
crates/sable-resolve/: Cargo.toml
crates/sable-resolve/src/: lib.rs
crates/sable-sema/: Cargo.toml
crates/sable-sema/src/: analyzer.rs  lib.rs  resolver.rs  sema.rs  type_sim_checker.rs
editor/nvim/: sable.lua
grammar/: SableLexer.g4  SableParser.g4
legacy/: CMakeLists.txt
legacy/libsable/: CMakeLists.txt
legacy/libsable/common/: Manager.h  Range.h
legacy/libsable/parsing/: Location.cc
legacy/libsable/parsing/Ast/: Ast.h
legacy/libsable/parsing/Parser/: Parser.cc
legacy/libsable/report/: Cache.cc  Cache.h  Diagnostic.cc  Diagnostic.h  Engine.cc  Write.cc
libsable/: CMakeLists.txt
libsable/common/: CMakeLists.txt  Manager.cc  Manager.h  Range.h
libsable/parsing/: Location.h
libsable/parsing/Ast/: Visitor.h
libsable/parsing/Lexer/: Lexer.cc  Lexer.h  Token.cc  Token.h
libsable/parsing/Parser/: Parser.cc  Parser.h
libsable/report/: CMakeLists.txt  Cache.cc  Cache.h  Diagnostic.cc  Diagnostic.h  Engine.cc  Engine.h  Label.cc  Label.h  Span.cc  Span.h  Write.cc  Write.h
libylang/: CMakeLists.txt  Manager.cc  Range.h
libylang/common/: Manager.cc  Manager.h  Range.h
libylang/parser/: CMakeLists.txt  Location.cc  Location.h  Manager.cc  Manager.h
libylang/parsing/: CMakeLists.txt  Location.cc  Location.h  Manager.cc  Manager.h
libylang/parsing/Ast/: Ast.h  Visitor.h
libylang/parsing/Lexer/: Lexer.cc  Lexer.h  Token.cc  Token.h
libylang/parsing/Parser/: Parser.cc  Parser.h
libylang/report/: CMakeLists.txt  Cache.cc  Cache.h  Diagnostic.cc  Diagnostic.h  Engine.cc  Engine.h  Report.h  Reporter.cc  Reporter.h
sable-lsp/: Cargo.toml
sable-lsp/src/: lib.rs
sablec/: Cargo.toml
sablec/src/: main.rs
sc/: CMakeLists.txt  main.cc
tree-sitter-sable/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-sable/bindings/c/: tree-sitter-sable.pc.in
tree-sitter-sable/bindings/c/tree_sitter/: tree-sitter-sable.h
tree-sitter-sable/bindings/go/: binding.go  binding_test.go
tree-sitter-sable/bindings/node/: binding.cc  index.js
tree-sitter-sable/bindings/python/tests/: test_binding.py
tree-sitter-sable/bindings/python/tree_sitter_sable/: __init__.py  binding.c
tree-sitter-sable/bindings/rust/: build.rs  lib.rs
tree-sitter-sable/bindings/swift/TreeSitterSableTests/: TreeSitterSableTests.swift
tree-sitter-sable/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
tree-sitter-sable/src/: grammar.json  node-types.json  parser.c
yc/: CMakeLists.txt  main.cc
