[workspace]
members = [
  "crates/sable-ast",
  "crates/sable-common",
  "crates/sable-errors",
  "crates/sable-ffi",
  "crates/sable-parser",
  "sable-lsp",
  "sablec",
]
resolver = "3"

[workspace.dependencies]
getset = "0.1.6"
smallvec = "1.15.1"
typed-builder = "0.21.0"
bumpalo = "3.18.1"
ariadne = "0.5.1"
phf = "0.11.3"
either = "1.15.0"

tower-lsp = "0.20.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }

serde = "1.0.219"
clap = "4.5.40"
paste = "1.0.15"

sable-ast = { path = "crates/sable-ast", features = ["serde"] }
sable-common = { path = "crates/sable-common" }
sable-parser = { path = "crates/sable-parser" }
sable-errors = { path = "crates/sable-errors" }
