[workspace]
members = [
  "crates/sable-arena",
  "crates/sable-ast",
  "crates/sable-common",
  "crates/sable-errors",
  "crates/sable-hir",
  "crates/sable-parse",
  "sablec",
]
resolver = "3"

[workspace.dependencies]
getset = "0.1.6"
smallvec = "1.15.1"
typed-builder = "0.21.0"
ariadne = "0.5.1"
phf = "0.11.3"
either = "1.15.0"

serde = "1.0.219"
clap = "4.5.40"
paste = "1.0.15"

cxx = "1.0.160" # features: c++11, c++17, c++20

sable-ast = { path = "crates/sable-ast" }
sable-common = { path = "crates/sable-common" }
sable-parse = { path = "crates/sable-parse" }
sable-errors = { path = "crates/sable-errors" }
sable-hir = { path = "crates/sable-hir" }
sable-arena = { path = "crates/sable-arena" }
