[workspace]
members = [
  "crates/sable-arena",
  "crates/sable-ast",
  "crates/sable-common",
  "crates/sable-hir",
  "crates/sable-lowering",
  "crates/sable-parse",
  "sablec",
]
resolver = "3"

[workspace.dependencies]
getset = "0.1.6"
smallvec = "1.15.1"
typed-builder = "0.21.0"
ariadne = "0.5.1"
phf = "0.11.3"
either = "1.15.0"
indexmap = "2.10.0"

serde = "1.0.219"
clap = "4.5.40"
paste = "1.0.15"

partial = { git = "https://github.com/Fabbboy/partial.git", branch = "master" }

sable-ast = { path = "crates/sable-ast" }
sable-common = { path = "crates/sable-common" }
sable-parse = { path = "crates/sable-parse" }
sable-arena = { path = "crates/sable-arena" }
sable-hir = { path = "crates/sable-hir" }
sable-lowering = { path = "crates/sable-lowering" }
