[package]
name = "sablec"
version = "0.1.0"
edition = "2024"

[dependencies]
sable-parse = { workspace = true }
sable-ast = { workspace = true, features = ["serde"] }
sable-common = { workspace = true }
sable-hir = { workspace = true }

bumpalo = { workspace = true }
ariadne = { workspace = true }

clap = { workspace = true, features = ["derive"] }