[package]
name = "tree-sitter-sable"
description = "Sable is a compiled language inspired by C, Rust and Swift"
version = "0.1.0"
authors = ["Fabrice"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sable"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://git.schaub-dev.xyz/cppuniverse/sable.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
