[package]
name = "sable-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
sable-common = { workspace = true }
sable-arena = { workspace = true }

getset = { workspace = true }
ariadne = { workspace = true }
smallvec = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
paste = { workspace = true }

[features]
default = []
serde = ["dep:serde", "smallvec/serde", "sable-common/serde"]
