[package]
name = "sable-common"
version = "0.1.0"
edition = "2024"

[dependencies]
getset = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
ariadne = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive"] }

sable-arena = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
