[package]
name = "sable-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true }
typed-builder = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }

sable-ast = { workspace = true }
sable-common = { workspace = true }
