[package]
name = "sable-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
getset = { workspace = true }
typed-builder = { workspace = true }

sable-arena = { workspace = true }
sable-common = { workspace = true }


serde = { workspace = true, optional = true, features = ["derive", "rc"] }

[features]
default = []
serde = ["dep:serde", "sable-arena/serde"]
