[package]
name = "sable-middle"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true }
getset = { workspace = true }
smallvec = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive", "rc"] }

sable-ast = { workspace = true }
sable-common = { workspace = true }

[features]
default = []
serde = ["dep:serde", "smallvec/serde"]
