[package]
name = "sable-middle"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true }
getset = { workspace = true }
smallvec = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive", "rc"] }

sable-hir = { workspace = true }
sable-ast = { workspace = true }

[features]
default = []
serde = ["dep:serde", "smallvec/serde"]
