[package]
name = "sable-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
sable-ast = { workspace = true }
sable-common = { workspace = true }
sable-errors = { workspace = true }

getset = { workspace = true }
smallvec = { workspace = true }
either = { workspace = true }
phf = { workspace = true, features = ["macros"]}
