[package]
name = "sable-report"
version = "0.1.0"
edition = "2024"

[dependencies]
sable-common = { workspace = true }
getset = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
typed-builder = { workspace = true }
pretty = { workspace = true }
colored = { workspace = true }
